--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
