--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@solana/web3.js": "^1.77.3",
     "@web3modal/auth-html": "^2.4.5",
+    "axios": "^1.4.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
     "webpack": "^5.86.0",
