--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
+    "sweetalert2": "^11.7.12",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
   },
