--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "test": "npx webpack --config webpack.config.js"
   }
 }
